# JPEG-Compression-Backdoor-Attack

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: paper_summary.md
configs/: base.yaml
configs/attack/: baseline_clean.yaml  jpeg_condbd.yaml  saliency_cutmix.yaml
configs/dataset/: cifar10.yaml  cifar100.yaml  gtsrb.yaml
configs/model/: resnet18.yaml  resnet50.yaml
configs/train/: eval_only.yaml  two_phase.yaml
data/: README.md
docs/: checklist.md  experiment_plan.md  method_overview.md
experiments/cifar100_saliency_cutmix/: config.yaml  notes.md  run.sh
experiments/gtsrb_condbd_rows7-8/: config.yaml  notes.md
notebooks/: 00_explore_gtsrb.ipynb  01_jpeg_trigger_visual.ipynb  02_saliency_map.ipynb
outputs/: README.md
scripts/: download_gtsrb.py  eval_backdoor.sh  gen_report.py  train_two_phase.sh
src/: __init__.py  mnist_jpeg_backdoor.py
src/attacks/: __init__.py  jpeg_condbd.py  trigger_generators.py  utils.py
src/cli/: eval.py  sweep.py  train.py
src/data/: __init__.py  datasets.py  utils.py
src/data/transforms/: __init__.py  backdoor_trigger.py  jpeg_compress.py
src/jpeg_backdoor/: __init__.py  datasets.py  evaluation.py  metrics.py  rounding.py  training.py  trigger.py
src/models/: __init__.py  factory.py  resnet.py  wide_resnet.py
src/training/: __init__.py  evaluator.py  loop_backdoor.py  loop_clean.py  loop_two_phase.py  metrics.py  scheduler.py
src/utils/: __init__.py  config.py  dist.py  logging.py  seed.py  viz.py
